variables & overrides stylesheet added

--- a/src/app/pages/edit-office/edit-office.component.html
+++ b/src/app/pages/edit-office/edit-office.component.html
@@ -1,4 +1,4 @@
-<div class="container my-3 max-width-1000">
+<div class="container my-3 mw-1000">
   <div class="row mb-5">
     <div class="col-1 pointer" (click)="back()">
       <img src="assets/icons/arrow-left.svg" />
