--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<div class="container my-3 max-width-1000">
+<div class="container my-3 mw-1000">
   <h2 class="mb-3">All Offices</h2>
 
   <div *ngIf="offices.length == 0">
