--- a/src/app/pages/office-view/office-view.component.html
+++ b/src/app/pages/office-view/office-view.component.html
@@ -1,4 +1,4 @@
-<div class="container my-3 max-width-1000">
+<div class="container my-3 mw-1000">
   <div *ngIf="isFormValid" class="snackbar">Please fill in all fields.</div>
   
   <div class="row mb-3">
