additional styling refactors

--- a/src/app/components/loading/loading.component.css
+++ b/src/app/components/loading/loading.component.css
@@ -6,3 +6,12 @@
   bottom: 0;
   z-index: 10000;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  margin: auto;
+  margin-top: calc((100vh / 2) - 50px);
+  overflow: hidden;
+}
