--- a/src/app/pages/office-view/office-view.component.html
+++ b/src/app/pages/office-view/office-view.component.html
@@ -1,8 +1,8 @@
 <div class="container my-3 mw-1000">
-  <div *ngIf="isFormValid" class="snackbar">Please fill in all fields.</div>
+  <div *ngIf="isFormValid" class="g-snackbar">Please fill in all fields.</div>
   
   <div class="row mb-3">
-    <div class="col-1 pointer" (click)="back()">
+    <div class="col-1 g-pointer" (click)="back()">
       <img src="assets/icons/arrow-left.svg" />
     </div>
     <div class="col d-flex justify-content-center">
@@ -69,7 +69,7 @@
   </div>
 
   <div
-    class="overlay-button pointer"
+    class="overlay-button g-pointer"
     data-bs-toggle="modal"
     data-bs-target="#add-new-member-modal-1"
   >
@@ -92,7 +92,7 @@
             <div class="fs-24 fw-800 ms-3">New Staff Member</div>
           </div>
           <div
-            class="col-2 d-flex align-items-center justify-content-center pointer"
+            class="col-2 d-flex align-items-center justify-content-center g-pointer"
             data-bs-dismiss="modal"
           >
             <img src="assets/icons/close-circle.svg" />
@@ -125,7 +125,7 @@
 
         <div class="row justify-content-center">
           <div
-            class="custom-button pointer"
+            class="g-custom-button g-pointer"
             data-bs-toggle="modal"
             data-bs-target="#add-new-member-modal-2"
           >
@@ -149,7 +149,7 @@
       <div class="modal-content p-3 border-radius">
         <div class="row">
           <div
-            class="col-1 d-flex align-items-center pointer"
+            class="col-1 d-flex align-items-center g-pointer"
             data-bs-toggle="modal"
             data-bs-target="#add-new-member-modal-1"
           >
@@ -159,7 +159,7 @@
             <div class="fs-24 fw-800 ms-3">New Staff Member</div>
           </div>
           <div
-            class="col-2 d-flex align-items-center justify-content-center pointer"
+            class="col-2 d-flex align-items-center justify-content-center g-pointer"
             data-bs-dismiss="modal"
           >
             <img src="assets/icons/close-circle.svg" />
@@ -170,7 +170,7 @@
         <div class="row justify-content-center mb-2">
           <div
             *ngFor="let avatar of avatars; let i = index"
-            class="mw-55 mx-2 my-1 d-flex justify-content-center pointer"
+            class="mw-55 mx-2 my-1 d-flex justify-content-center g-pointer"
           >
             <img
               [ngClass]="toggle[i] ? 'dark' : 'null'"
@@ -186,7 +186,7 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class="custom-button pointer" (click)="addMember()">
+          <div class="g-custom-button g-pointer" (click)="addMember()">
             ADD STAFF MEMBER
           </div>
         </div>
