additional styling refactoring

--- a/src/app/components/member-overview/member-overview.component.html
+++ b/src/app/components/member-overview/member-overview.component.html
@@ -25,7 +25,7 @@
       </div>
 
       <div
-        class="blue-text text-center pt-4 pb-2 g-pointer"
+        class="g-blue-text text-center pt-4 pb-2 g-pointer"
         (click)="openModal2(template2); closeModal(1)"
       >
         DELETE STAFF MEMBER
@@ -54,7 +54,7 @@
       </div>
 
       <div
-        class="blue-text text-center pt-4 pb-4"
+        class="g-blue-text text-center pt-4 pb-4"
         (click)="openModal1(template); closeModal(2); closeModal(1)"
       >
         KEEP MEMBER
