--- a/src/app/pages/edit-office/edit-office.component.html
+++ b/src/app/pages/edit-office/edit-office.component.html
@@ -80,7 +80,7 @@
       </div>
      
       <div class="mb-5">
-        <div class="row blue-text text-center justify-content-center g-pointer">
+        <div class="row g-blue-text text-center justify-content-center g-pointer">
           <div class="" (click)="deleteOffice()">DELETE OFFICE</div>
         </div>
       </div>
