--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,4 +10,9 @@
 
   --border8: 8px;
   --border100: 100px;
+
+  --fontSize12: 12px;
+  --fontSize18: 18px;
+  --fontSize20: 20px;
+  --fontSize24: 24px;
 }
