--- a/src/app/components/member-overview/member-overview.component.html
+++ b/src/app/components/member-overview/member-overview.component.html
@@ -42,7 +42,7 @@
           <img src="assets/icons/arrow-left.svg" />
         </div>
         <div class="col pe-0">
-          <div class="fs-20 fw-b ms-3">
+          <div class="g-fs-20 fw-b ms-3">
             Are You Sure You Want To Delete Staff Member?
           </div>
         </div>
@@ -68,7 +68,7 @@
     <div class="p-3 border-radius">
       <div class="row">
         <div class="col">
-          <div class="fs-24 fw-800 ms-3">Edit Staff Member</div>
+          <div class="g-fs-24 fw-800 ms-3">Edit Staff Member</div>
         </div>
         <div
           class="col-2 d-flex align-items-center justify-content-center g-pointer"
@@ -117,7 +117,7 @@
           <img src="assets/icons/arrow-left.svg" />
         </div>
         <div class="col pe-0">
-          <div class="fs-24 fw-800 ms-3">Edit Staff Member</div>
+          <div class="g-fs-24 fw-800 ms-3">Edit Staff Member</div>
         </div>
         <div
           class="col-2 d-flex align-items-center justify-content-center g-pointer"
@@ -126,12 +126,12 @@
           <img src="assets/icons/close-circle.svg" />
         </div>
       </div>
-      <div class="fs-24 fw-600 mb-3 mt-5">Avatar</div>
+      <div class="g-fs-24 fw-600 mb-3 mt-5">Avatar</div>
 
       <div class="row justify-content-center mb-2">
         <div
           *ngFor="let avatar of avatars; let i = index"
-          class="mw-55 mx-2 my-1 d-flex justify-content-center g-pointer"
+          class="g-mw-55 mx-2 my-1 d-flex justify-content-center g-pointer"
         >
           <img
             [ngClass]="toggle[i] ? 'dark' : 'null'"
