--- a/src/app/components/office-card/office-card.component.html
+++ b/src/app/components/office-card/office-card.component.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="col-8 justify-content-start">
-          <div class="fs-12 ps-2 text-color">
+          <div class="g-fs-12 ps-2 text-color">
             <strong>{{ office.members.length }}</strong> Staff Members in Office
           </div>
         </div>
@@ -35,7 +35,7 @@
 
       <div class="row flex-nowrap" (click)="toggleSingleDrawer()">
         <div class="col-6 ms-4 d-flex justify-content-end align-items-center">
-          <div class="fs-12">More info</div>
+          <div class="g-fs-12">More info</div>
         </div>
         <div
           class="col-5 d-flex justify-content-start"
@@ -59,7 +59,7 @@
             </div>
           </div>
           <div class="col-8 justify-content-start">
-            <div class="fs-12 ps-2 fw-400">{{ office.phone }}</div>
+            <div class="g-fs-12 ps-2 fw-400">{{ office.phone }}</div>
           </div>
           <div class="col"></div>
         </div>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div class="col-8 justify-content-start">
-            <div class="fs-12 ps-2">{{ office.email }}</div>
+            <div class="g-fs-12 ps-2">{{ office.email }}</div>
           </div>
           <div class="col"></div>
         </div>
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="col-8 justify-content-start">
-            <div class="fs-12 ps-2">Office Capacity: {{ office.capacity }}</div>
+            <div class="g-fs-12 ps-2">Office Capacity: {{ office.capacity }}</div>
           </div>
           <div class="col"></div>
         </div>
@@ -95,7 +95,7 @@
             </div>
           </div>
           <div class="col-8 justify-content-start">
-            <div class="fs-12 ps-2">
+            <div class="g-fs-12 ps-2">
               {{ office.address }}
             </div>
           </div>
@@ -134,8 +134,8 @@
             </div>
           </div>
           <div class="col-8 justify-content-start">
-            <!-- <div class="fs-12 fw-700 py-2">5&nbsp;</div> -->
-            <div class="fs-12 ps-2 text-color">
+            <!-- <div class="g-fs-12 fw-700 py-2">5&nbsp;</div> -->
+            <div class="g-fs-12 ps-2 text-color">
               <strong>{{ office.members.length }}</strong> Staff Members in
               Office
             </div>
@@ -149,7 +149,7 @@
 
         <div class="row flex-nowrap" (click)="toggleDrawer(i)">
           <div class="col-6 ms-4 d-flex justify-content-end align-items-center">
-            <div class="fs-12">More info</div>
+            <div class="g-fs-12">More info</div>
           </div>
           <div
             class="col-5 d-flex justify-content-start"
@@ -173,7 +173,7 @@
               </div>
             </div>
             <div class="col-8 justify-content-start">
-              <div class="fs-12 ps-2 fw-400">{{ office.phone }}</div>
+              <div class="g-fs-12 ps-2 fw-400">{{ office.phone }}</div>
             </div>
             <div class="col"></div>
           </div>
@@ -185,7 +185,7 @@
               </div>
             </div>
             <div class="col-8 justify-content-start">
-              <div class="fs-12 ps-2">{{ office.email }}</div>
+              <div class="g-fs-12 ps-2">{{ office.email }}</div>
             </div>
             <div class="col"></div>
           </div>
@@ -197,7 +197,7 @@
               </div>
             </div>
             <div class="col-8 justify-content-start">
-              <div class="fs-12 ps-2">
+              <div class="g-fs-12 ps-2">
                 Office Capacity: {{ office.capacity }}
               </div>
             </div>
@@ -211,7 +211,7 @@
               </div>
             </div>
             <div class="col-8 justify-content-start">
-              <div class="fs-12 ps-2">
+              <div class="g-fs-12 ps-2">
                 {{ office.address }}
               </div>
             </div>
