--- a/src/app/pages/edit-office/edit-office.component.html
+++ b/src/app/pages/edit-office/edit-office.component.html
@@ -1,10 +1,10 @@
-<div class="container my-3 mw-1000">
+<div class="container my-3 g-mw-1000">
   <div class="row mb-5">
     <div class="col-1 g-pointer" (click)="back()">
       <img src="assets/icons/arrow-left.svg" />
     </div>
     <div class="col d-flex justify-content-center">
-      <div class="fs-18">Edit Office</div>
+      <div class="g-fs-18">Edit Office</div>
     </div>
     <div class="col-1"></div>
   </div>
@@ -62,7 +62,7 @@
       <div class="row justify-content-center mb-2">
         <div
           *ngFor="let color of colors; let i = index"
-          class="mw-43 mx-2 my-1 d-flex justify-content-center g-pointer"
+          class="g-mw-43 mx-2 my-1 d-flex justify-content-center g-pointer"
         >
           <img
             [ngClass]="toggle[i] ? 'dark' : 'null'"
